<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainscreen.MainActivity">

    <Button
        android:id="@+id/journal"
        android:layout_width="179dp"
        android:layout_height="64dp"
        android:onClick="openJournal"
        android:text="@string/Journal"
        app:layout_constraintBottom_toTopOf="@+id/planner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="journal" />

    <Button
        android:id="@+id/planner"
        android:layout_width="179dp"
        android:layout_height="64dp"
        android:onClick="openPlanner"
        android:text="@string/Planner"
        app:layout_constraintBottom_toTopOf="@+id/timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/journal"
        tools:text="Planner" />

    <Button
        android:id="@+id/timer"
        android:layout_width="179dp"
        android:layout_height="64dp"
        android:onClick="openTimer"
        android:text="@string/study_timer"
        app:layout_constraintBottom_toTopOf="@+id/quoteView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/planner"
        tools:text="Study Timer" />

    <TextView
        android:id="@+id/quoteView"
        android:layout_width="350dp"
        android:layout_height="87dp"
        android:gravity="center"
        android:text="@string/quote_test_123"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer" />

    <!-- Settings, should always be in the overflow -->


</androidx.constraintlayout.widget.ConstraintLayout>