<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".journal.AddEntry">

    <EditText
        android:id="@+id/content_edittext"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/enter_content_view"
        android:inputType="textMultiLine"
        android:minLines="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_edittext"
        android:importantForAutofill="no"
        android:theme="@style/Theme.FocusFox"/>

    <EditText
        android:id="@+id/title_edittext"
        android:layout_width="372dp"
        android:layout_height="41dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:hint="@string/enter_title_view"
        android:importantForAutofill="no"
        android:inputType="textShortMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/content_edittext"
        app:layout_constraintTop_toTopOf="parent">

        <requestFocus
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </EditText>

    <Button
        android:id="@+id/add_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/add_entry_button"
        app:layout_constraintEnd_toEndOf="@+id/content_edittext"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/content_edittext"
        app:layout_constraintTop_toBottomOf="@+id/content_edittext"
        android:enabled="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>
